clusters/beryjuorg-prd/authentik-version/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-version
  namespace: authentik-version
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-version
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-version
    spec:
      containers:
        - image: ghcr.io/goauthentik/version:auto-1633547885 # {"$imagepolicy": "flux-system:authentik-version-update"}
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources: {}
