clusters/beryjuorg-prd/authentik-version/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-version
  namespace: authentik-version
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: authentik-version
  sessionAffinity: None
  type: ClusterIP
