clusters/beryjuorg-prd/authentik-version/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: authentik-version
  namespace: authentik-version
spec:
  rules:
    - host: version.goauthentik.io
      http:
        paths:
          - backend:
              service:
                name: authentik-version
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - version.goauthentik.io
      secretName: authentik-version
